# ORACLE

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  index.html  pyproject.toml  pyrefly.toml  run.sh
agent/: config.py  loop.py  main.py
agent/pipeline/: action.py  forecast.py  review.py  search.py
agent/utils/: llm.py  search.py
