[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle-trading-agent"
version = "0.1.0"
description = "ORACLE: Optimal Reasoning Agent for Calibrated Leveraged Execution — AI Forecasting Hackathon 2026 Trading Track"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ai-prophet-core>=0.1.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "tavily-python>=0.3.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
oracle = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
